--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -7,13 +7,13 @@
     "no_account": "ليس لديك حساب بعد؟",
     "register": "تسجيل",
     "login": "تسجيل الدخول",
-    "search_article": "ابحث عن عنصر",
+    "search_article": "البحث عن منتج",
     "publish_article": "نشر منتج",
     "my_ads": "إعلاناتي",
     "my_sales": "مبيعاتي",
     "my_purchases": "مشترياتي",
     "my_cart": "سلتي",
-    "my_favorites": "مفضلاتي",
+    "my_favorites": "المفضل لدي",
     "my_liked": "العناصر التي أعجبتني",
     "notifications": "الإشعارات",
     "my_account": "حسابي",
@@ -33,7 +33,7 @@
     "commission_note": "يتم خصم مبلغ العمولة عند دفع المشتري",
     "pourquoi_choisir": "لماذا تختار شوب<span class=\"color\">ين</span>",
     "protection_et_securite": "الحماية والأمان",
-    "protection_description": "يوفر لك شوب<span class=\"color\">ين</span> أدوات عملية مثل الرسائل الخاصة ونظام الإبلاغ لضمان بيئة آمنة ومعاملات موثوقة.",
+    "protection_description": "توفر لك شوب<span class=\"color\">ين</span> أدوات عملية مثل الرسائل الخاصة ونظام الإبلاغ لضمان بيئة آمنة ومعاملات موثوقة.",
     "experience_agreable": "تجربة مريحة!",
     "experience_description": "سواء كنت تشتري أو تبيع، ستكون تجربتك على شوب<span class=\"color\">ين</span> دائمًا مميزة من خلال خدمة استثنائية وبساطة لا مثيل لها ورضا مضمون.",
     "livraison_porte_a_porte": "توصيل من الباب إلى الباب",
@@ -96,14 +96,7 @@
 "female": "أنثى",
 "seller": "البائع",
 "title": "إليك الشو<span class=\"color\">ب</span>ينر",
-"avis": {
-    "zero": "لا توجد مراجعات",
-    "one": "مراجعة",
-    "two": "مراجعتان",
-    "few": "مراجعات",
-    "many": "مراجعة",
-    "other": "مراجعة"
-  },
+"avis": "مراجعة",
   "SHOPIN_LUXURY": "شوبين الفخامة",
   "Frais de Livraison": "رسوم التوصيل",
   "Ajouter": "أضف إلى السلة",
@@ -116,12 +109,13 @@
     "Détails": "تفاصيل",
     "Condition": "الحالة",
     "Catégorie": "الفئة",
+    "Catégories": "الفئات",
     "Région": "المنطقة",
     "Publié le": "تاريخ النشر",
     "Description": "الوصف",
     "Aucune description disponible !": "لا يوجد وصف متاح!",
     "Voilà le SHOPINER": "إليكم SHOPINER",
-    "Ventes": "مبيعات",
+    "Ventes": "المبيعات",
     "Annonces": "إعلانات",
     "Articles similaires": "عناصر مشابهة",
     "title2": "منتجات من <span class=\"ft-bold\">الشوب<span class=\"color\">ين</span>ر</span>",
@@ -154,7 +148,7 @@
     "no_more_review": "لا يمكنك ترك مراجعة لأنك قد قمت بذلك بالفعل!",
     "attention": "تحذير!",
     "rate_button": "قيم :star",
-    "contact": "اتصال",
+    "contact": "الإتصال",
     "chat": "دردشة",
     "call1": "اتصل بي",
     "email1": "البريد الإلكتروني",
@@ -366,7 +360,7 @@
 "current_rib_number": "رقم RIB الحالي",
 "bank_name": "اسم البنك",
 "account_holder_name": "اسم صاحب الحساب",
-"cin_image": "صورة CIN (بطاقة الهوية الوطنية)",
+"cin_image": "صورة CIN (صورة عن بطاقة التسجيل)",
 "save_bank_info_changes": "حفظ التغييرات على معلوماتي البنكية",
 "current_password": "كلمة المرور الحالية",
 "new_password": "كلمة المرور الجديدة",
@@ -412,7 +406,49 @@
 "select_category": "يرجى اختيار فئة*",
 "subcategory": "الفئة الفرعية",
 "select_subcategory": "يرجى اختيار فئة فرعية",
-"please_select": "يرجى الاختيار"
+"please_select": "يرجى الاختيار",
+"Effacer": "حذف",
+"Aperçu": "معاينة",
+"alert_removed": "تمت إزالة هذا الشوبينر من أعلى قائمة الشوبينرز الخاصة بك",
+"alert_pinned": "تمت تثبيت هذا الشوبينر من أعلى قائمة الشوبينرز الخاصة بك",
+"confirm_title": "هل أنت متأكد من أنك تريد حذف حسابك بشكل دائم",
+    "confirm_text": "هذا الإجراء لا يمكن التراجع عنه",
+    "confirm_button": "نعم، احذف",
+    "cancel_button": "إلغاء",
+    "deleted_title": "تم الحذف",
+    "deleted_text": "تم حذف حسابك.",
+    "info_updated": "تم تحديث المعلومات بنجاح",
+    "choose_file1": "اختر ملفًا",
+    "no_file_chosen": "لم يتم اختيار ملف",
+    "no_changes_made": "لم يتم إجراء أي تغييرات",
+    "our_partners": "شركاؤنا",
+    "rib_number_required": "يرجى إدخال رقم RIB الخاص بك",
+    "rib_number_min": "يجب أن يحتوي رقم RIB الخاص بك على 13 حرفًا على الأقل",
+    "rib_number_max": "لا يمكن أن يتجاوز رقم RIB الخاص بك 32 حرفًا",
+    "bank_name_required": "يرجى إدخال اسم البنك",
+    "titulaire_name_required": "يرجى إدخال اسم صاحب الحساب",
+    "cin_img_image": "يرجى تحميل صورة صالحة.",
+    "required": "يرجى ملء هذه الخانة",
+    "string": "يرجى إدخال قيمة نصية",
+    "avatar_max": "يرجى اختيار صورة بحجم أقصى 2 ميغابايت",
+    "mimes": "يرجى اختيار صورة من نوع jpg أو png أو jpeg أو webp",
+    "email_validation": "يرجى إدخال عنوان بريد إلكتروني صالح",
+    "must_be_13": "يجب أن يكون عمرك 13 سنة على الأقل",
+    "email_already_exists": "هذا البريد الإلكتروني موجود بالفعل",
+    "profile_photo_changed": "قام العميل بتغيير صورة ملفه الشخصي",
+    "photo_validation_pending": "سيتم التحقق من صورة ملفك الشخصي في غضون الـ 24 ساعة القادمة.",
+    "photo_updated_successfully": "تم تحديث صورة ملفك الشخصي بنجاح.",
+    "admin_event": "قام مستخدم بتغيير صورة ملفه الشخصي",
+    "old_password_required": "يرجى إدخال كلمة المرور القديمة الخاصة بك",
+    "password_required": "يرجى إدخال كلمة المرور الجديدة الخاصة بك",
+    "password_confirmed": "كلمات المرور  غير متطابقة",
+    "password_min": "يجب أن تحتوي كلمة المرور الجديدة على 8 أحرف على الأقل",
+    "password_regex": "يجب أن تحتوي كلمة المرور على حرف كبير واحد، حرف صغير واحد، رقم، ورمز خاص (-!@# إلخ)",
+    "password_updated_successfully": "لقد تم تحديث كلمة المرور الخاصة بك بنجاح"
+
+
+
+
 
 
 
