--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -7,7 +7,7 @@
     "register": "Register",
     "login": "Log in",
     "search_article": "Search for an item",
-    "publish_article": "Add a product",
+    "publish_article": "Add an item",
     "my_ads": "My ads",
     "my_sales": "My sales",
     "my_purchases": "My purchases",
@@ -17,7 +17,7 @@
     "notifications": "Notifications",
     "my_account": "My account",
     "logout": "Log out",
-    "about": "About",
+    "about": "About Us",
     "home": "Home",
     "shopiners_part1": "Shop",
     "shopiners_part2": "in",
@@ -107,6 +107,7 @@
     "Détails": "Details",
     "Condition": "Condition",
     "Catégorie": "Category",
+    "Catégories": "Categories",
     "Région": "Region",
     "Publié le": "Published on",
     "Description": "Description",
@@ -358,7 +359,7 @@
 "current_rib_number": "Current RIB number",
     "bank_name": "Bank name",
     "account_holder_name": "Account holder name",
-    "cin_image": "CIN image (National Identity Card)",
+    "cin_image": "CIN image (Photo of the registration card)",
     "save_bank_info_changes": "Save changes to my bank information",
     "current_password": "Current password",
     "new_password": "New password",
@@ -386,13 +387,14 @@
     "download_image": "Download Image",
     "save": "Save",
     "update": "Update",
-    "choose_images": "Please choose images for your product",
-    "add_more_details": "Provide more details about your product",
-    "price1": "Your Product Price",
-    "condition": "Product Condition",
-    "original_price": "Original Purchase Price",
-    "description": "Product Description",
-    "description_placeholder": "Please enter your product description",
+    "choose_images": "Please add pictures of your item (minimum 3 pictures)",
+    "add_more_details": "Provide more details about your item",
+    "post_title": "Item title",
+    "price1": "Your Item Price",
+    "condition": "Item Condition",
+    "original_price": "Initial purchase price",
+    "description": "Item Description",
+    "description_placeholder": "Please enter your item description",
     "publication_warning": "Please make sure your post is complete and accurate as you won't be able to edit it after validation.",
     "required_fields_note": "All fields marked with (*) are required.",
     "placeholder_title": "Title",
@@ -403,7 +405,48 @@
   "select_category": "Please select a category*",
   "subcategory": "Sub-category",
   "select_subcategory": "Please select a sub-category",
-  "please_select": "Please select"
+  "please_select": "Please select",
+  "Effacer": "Delete",
+  "Aperçu": "Preview",
+  "alert_removed": "SHOPINER removed from your SHOPINERS TOPLIST",
+"alert_pinned": "SHOPINER pinned to your SHOPINERS TOPLIST!",
+"confirm_title": "Are you sure you want to delete your account permanently?",
+    "confirm_text": "This action is irreversible!",
+    "confirm_button": "Yes, delete it!",
+    "cancel_button": "Cancel",
+    "deleted_title": "Deleted!",
+    "deleted_text": "Your account has been deleted.",
+    "info_updated": "Information updated successfully",
+    "choose_file1": "Choose File",
+    "no_file_chosen": "No file chosen",
+    "no_changes_made": "No changes were made.",
+    "our_partners": "Our Partners",
+    "rib_number_required": "Please enter your RIB number",
+        "rib_number_min": "Your RIB number must have at least 13 characters",
+        "rib_number_max": "Your RIB number cannot exceed 32 characters",
+        "bank_name_required": "Please enter the bank name",
+        "titulaire_name_required": "Please enter the account holder's name",
+        "cin_img_image": "Please upload a valid image.",
+        "required": "Please fill out this field",
+        "string": "Please enter a text value",
+        "avatar_max": "Please choose an image with a maximum size of 2MB",
+        "mimes": "Please choose an image of type jpg, png, jpeg, or webp",
+        "email_validation": "Please enter a valid email address",
+        "must_be_13": "You must be at least 13 years old",
+        "email_already_exists": "This email already exists!",
+        "profile_photo_changed": "has changed their profile photo",
+        "photo_validation_pending": "Your profile photo will be validated within the next 24 hours.",
+        "photo_updated_successfully": "Your profile photo has been updated successfully.",
+        "admin_event": "A user has changed their profile photo",
+        "old_password_required": "Please enter your old password",
+        "password_required": "Please enter your new password",
+        "password_confirmed": "Passwords do not match",
+        "password_min": "Your new password must be at least 8 characters long",
+        "password_regex": "The password must contain at least one uppercase letter, one lowercase letter, a number, and a special character (-!@# etc.)",
+        "password_updated_successfully": "Your password has been updated successfully!"
+
+
+
 
 
 
