--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -108,6 +108,7 @@
     "Détails": "Détails",
     "Condition": "Condition",
     "Catégorie": "Catégorie",
+    "Catégories": "Categories",
     "Région": "Région",
     "Publié le": "Publié le",
     "Description": "Description",
@@ -360,7 +361,7 @@
 "current_rib_number": "Numéro de RIB actuel",
     "bank_name": "Nom de la banque",
     "account_holder_name": "Nom du titulaire",
-    "cin_image": "Image du CIN (Carte d'Identité Nationale)",
+    "cin_image": "Image du CIN (Image de la carte d’immatriculation)",
     "save_bank_info_changes": "Sauvegarder les modifications de mes informations bancaires",
     "current_password": "Mot de passe actuel",
     "new_password": "Nouveau mot de passe",
@@ -406,7 +407,47 @@
   "select_category": "Veuillez sélectionner une catégorie*",
   "subcategory": "Sous-catégorie",
   "select_subcategory": "Veuillez sélectionner une sous-catégorie",
-  "please_select": "Veuillez sélectionner"
+  "please_select": "Veuillez sélectionner",
+  "Effacer": "Effacer",
+  "Aperçu": "Aperçu",
+  "alert_removed": "SHOPINER retiré de votre TOPLISTE de SHOPINERS",
+"alert_pinned": "SHOPINER épinglé à votre TOPLISTE de SHOPINERS !",
+"confirm_title": "Êtes-vous sûr de vouloir supprimer définitivement votre compte?",
+    "confirm_text": "Cette action est irréversible!",
+    "confirm_button": "Oui, supprimez!",
+    "cancel_button": "Annuler",
+    "deleted_title": "Supprimé!",
+    "deleted_text": "Votre compte a été supprimé.",
+    "info_updated": "Informations mises à jour avec succès",
+    "choose_file1": "Choisir un fichier",
+    "no_file_chosen": "Aucun fichier choisi",
+    "no_changes_made": "Aucune modification n'a été effectuée.",
+    "our_partners": "Nos Partenaires",
+    "rib_number_required": "Veuillez saisir votre numéro de RIB",
+    "rib_number_min": "Votre numéro de RIB doit contenir au moins 13 caractères",
+    "rib_number_max": "Votre numéro de RIB ne peut pas dépasser 32 caractères",
+    "bank_name_required": "Veuillez saisir le nom de la banque",
+    "titulaire_name_required": "Veuillez saisir le nom du titulaire du compte",
+    "cin_img_image": "Veuillez télécharger une image valide.",
+    "required": "Veuillez renseigner ce champ",
+    "string": "Veuillez entrer une valeur de type texte",
+    "avatar_max": "Veuillez choisir une image de maximum 2MB",
+    "mimes": "Veuillez choisir une image de type jpg, png, jpeg, webp",
+    "email_validation": "Veuillez entrer une adresse email valide",
+    "must_be_13": "Vous devez être âgé d'au moins 13 ans",
+    "email_already_exists": "Cet email existe déjà!",
+    "profile_photo_changed": "vient de changé sa photo de profil",
+    "photo_validation_pending": "Votre photo de profil sera validée dans les prochaines 24 heures.",
+    "photo_updated_successfully": "Votre photo de profil a été mise à jour avec succès.",
+    "admin_event": "Un utilisateur a changé sa photo de profil",
+    "old_password_required": "Veuillez saisir votre ancien mot de passe",
+    "password_required": "Veuillez saisir votre nouveau mot de passe",
+    "password_confirmed": "Les mots de passe ne correspondent pas",
+    "password_min": "Votre nouveau mot de passe doit contenir au moins 8 caractères",
+    "password_regex": "Le mot de passe doit contenir au moins une lettre majuscule, une lettre minuscule, un chiffre et un caractère spécial (-!@# etc.)",
+    "password_updated_successfully": "Votre mot de passe a été mis à jour avec succès!"
+
+
 
 
 
