--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -9,6 +9,7 @@
     "login": "تسجيل الدخول",
     "search_article": "البحث عن منتج",
     "publish_article": "نشر منتج",
+    "publish_article1": "هل تريد القيام ببيع منتج",
     "my_ads": "إعلاناتي",
     "my_sales": "مبيعاتي",
     "my_purchases": "مشترياتي",
@@ -254,7 +255,7 @@
   "modification_blocked_message": "لأنه تم تعديله قبل أقل من أسبوع.",
   "time_remaining_to_edit": "الوقت المتبقي قبل التعديل:",
   "ad_not_found": "الإعلان غير موجود / أبلغ عنه!",
-  "price_reduction_success": "تم قبول السعر الجديد :price درهم. <br/> يمكنك تخفيض سعر هذا المنتج مرة أخرى خلال :countdown",
+  "price_reduction_success": "تم قبول السعر الجديد :price درهم. <br/> يمكنك تخفيض سعر هذا المنتج مرة أخرى خلال 6 أيام 23 ساعة و 59 دقيقة",
   "voyage_mode": "وضع السفر",
   "on_sale1": "قيد البيع",
   "sold": "تم البيع",
@@ -412,39 +413,50 @@
 "alert_removed": "تمت إزالة هذا الشوبينر من أعلى قائمة الشوبينرز الخاصة بك",
 "alert_pinned": "تمت تثبيت هذا الشوبينر من أعلى قائمة الشوبينرز الخاصة بك",
 "confirm_title": "هل أنت متأكد من أنك تريد حذف حسابك بشكل دائم",
-    "confirm_text": "هذا الإجراء لا يمكن التراجع عنه",
-    "confirm_button": "نعم، احذف",
-    "cancel_button": "إلغاء",
-    "deleted_title": "تم الحذف",
-    "deleted_text": "تم حذف حسابك.",
-    "info_updated": "تم تحديث المعلومات بنجاح",
-    "choose_file1": "اختر ملفًا",
-    "no_file_chosen": "لم يتم اختيار ملف",
-    "no_changes_made": "لم يتم إجراء أي تغييرات",
-    "our_partners": "شركاؤنا",
-    "rib_number_required": "يرجى إدخال رقم RIB الخاص بك",
-    "rib_number_min": "يجب أن يحتوي رقم RIB الخاص بك على 13 حرفًا على الأقل",
-    "rib_number_max": "لا يمكن أن يتجاوز رقم RIB الخاص بك 32 حرفًا",
-    "bank_name_required": "يرجى إدخال اسم البنك",
-    "titulaire_name_required": "يرجى إدخال اسم صاحب الحساب",
-    "cin_img_image": "يرجى تحميل صورة صالحة.",
-    "required": "يرجى ملء هذه الخانة",
-    "string": "يرجى إدخال قيمة نصية",
-    "avatar_max": "يرجى اختيار صورة بحجم أقصى 2 ميغابايت",
-    "mimes": "يرجى اختيار صورة من نوع jpg أو png أو jpeg أو webp",
-    "email_validation": "يرجى إدخال عنوان بريد إلكتروني صالح",
-    "must_be_13": "يجب أن يكون عمرك 13 سنة على الأقل",
-    "email_already_exists": "هذا البريد الإلكتروني موجود بالفعل",
-    "profile_photo_changed": "قام العميل بتغيير صورة ملفه الشخصي",
-    "photo_validation_pending": "سيتم التحقق من صورة ملفك الشخصي في غضون الـ 24 ساعة القادمة.",
-    "photo_updated_successfully": "تم تحديث صورة ملفك الشخصي بنجاح.",
-    "admin_event": "قام مستخدم بتغيير صورة ملفه الشخصي",
-    "old_password_required": "يرجى إدخال كلمة المرور القديمة الخاصة بك",
-    "password_required": "يرجى إدخال كلمة المرور الجديدة الخاصة بك",
-    "password_confirmed": "كلمات المرور  غير متطابقة",
-    "password_min": "يجب أن تحتوي كلمة المرور الجديدة على 8 أحرف على الأقل",
-    "password_regex": "يجب أن تحتوي كلمة المرور على حرف كبير واحد، حرف صغير واحد، رقم، ورمز خاص (-!@# إلخ)",
-    "password_updated_successfully": "لقد تم تحديث كلمة المرور الخاصة بك بنجاح"
+"confirm_text": "هذا الإجراء لا يمكن التراجع عنه",
+"confirm_button": "نعم، احذف",
+"cancel_button": "إلغاء",
+"deleted_title": "تم الحذف",
+"deleted_text": "تم حذف حسابك.",
+"info_updated": "تم تحديث المعلومات بنجاح",
+"choose_file1": "اختر ملفًا",
+"no_file_chosen": "لم يتم اختيار ملف",
+"no_changes_made": "لم يتم إجراء أي تغييرات",
+"our_partners": "شركاؤنا",
+"rib_number_required": "يرجى إدخال رقم RIB الخاص بك",
+"rib_number_min": "يجب أن يحتوي رقم RIB الخاص بك على 13 حرفًا على الأقل",
+"rib_number_max": "لا يمكن أن يتجاوز رقم RIB الخاص بك 32 حرفًا",
+"bank_name_required": "يرجى إدخال اسم البنك",
+"titulaire_name_required": "يرجى إدخال اسم صاحب الحساب",
+"cin_img_image": "يرجى تحميل صورة صالحة.",
+"required": "يرجى ملء هذه الخانة",
+"string": "يرجى إدخال قيمة نصية",
+"avatar_max": "يرجى اختيار صورة بحجم أقصى 2 ميغابايت",
+"mimes": "يرجى اختيار صورة من نوع jpg أو png أو jpeg أو webp",
+"email_validation": "يرجى إدخال عنوان بريد إلكتروني صالح",
+"must_be_13": "يجب أن يكون عمرك 13 سنة على الأقل",
+"email_already_exists": "هذا البريد الإلكتروني موجود بالفعل",
+"profile_photo_changed": "قام العميل بتغيير صورة ملفه الشخصي",
+"photo_validation_pending": "سيتم التحقق من صورة ملفك الشخصي في غضون الـ 24 ساعة القادمة.",
+"photo_updated_successfully": "تم تحديث صورة ملفك الشخصي بنجاح.",
+"admin_event": "قام مستخدم بتغيير صورة ملفه الشخصي",
+"old_password_required": "يرجى إدخال كلمة المرور القديمة الخاصة بك",
+"password_required": "يرجى إدخال كلمة المرور الجديدة الخاصة بك",
+"password_confirmed": "كلمات المرور  غير متطابقة",
+"password_min": "يجب أن تحتوي كلمة المرور الجديدة على 8 أحرف على الأقل",
+"password_regex": "يجب أن تحتوي كلمة المرور على حرف كبير واحد، حرف صغير واحد، رقم، ورمز خاص (-!@# إلخ)",
+"password_updated_successfully": "لقد تم تحديث كلمة المرور الخاصة بك بنجاح",
+"price_update_success": "تم تحديث السعر بنجاح.",
+    "price_reduction_success2": "تم قبول السعر الجديد :price درهم. <br/> يمكنك تقليل سعر هذا العنصر مرة أخرى في 6 أيام 23 ساعة و 59 دقيقة.",
+    "prix.required": "السعر مطلوب",
+    "prix.numeric": "يجب أن يكون السعر رقماً",
+    "prix.min": "يجب أن يكون السعر أكبر من 1 درهم",
+    "price_change_limit": "لقد قمت بتغيير السعر في آخر 7 أيام. يمكنك إجراء تغيير جديد في :daysRemaining يوم و :hoursRemaining ساعة.",
+    "price_change_error": "يرجى إدخال سعر أقل من السعر الحالي.",
+    "time_remaining": ":daysRemaining و :hoursRemaining و :minutesRemaining",
+    "days_remaining": "{0} لا أيام متبقية|{1} :count يوم |[2,*] :count أيام",
+    "hours_remaining": "{0} لا ساعات متبقية|{1} :count ساعة |[2,*] :count ساعة",
+    "minutes_remaining": "{0} لا دقائق متبقية|{1} :count دقيقة |[2,*] :count دقيقة"
 
 
 
