--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -457,7 +457,18 @@
     "time_remaining": ":daysRemaining et :hoursRemaining et :minutesRemaining",
     "days_remaining": "{0} Aucun jour restant|{1} :count jour|[2,*] :count jours",
     "hours_remaining": "{0} Aucune heure restante|{1} :count heure|[2,*] :count heures",
-    "minutes_remaining": "{0} Aucune minute restante|{1} :count minute|[2,*] :count minutes"
+    "minutes_remaining": "{0} Aucune minute restante|{1} :count minute|[2,*] :count minutes",
+    "shipment_tracking.title": "Suivi de votre commande",
+    "shipment_tracking.label": "ID d'expédition",
+    "shipment_tracking.placeholder": "Entrez votre ID (ex: 12345678)",
+    "shipment_tracking.track_button": "Suivre l'expédition",
+    "shipment_tracking.no_info": "Aucune information de suivi disponible pour le moment.",
+    "shipment_tracking.details": "Détails de suivi",
+    "shipment_tracking.number": "Numéro",
+    "orders.my_orders": "Mes commandes",
+    "orders.track_my_orders": "Suivre mes commandes"
+
+
 
 
 
